--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -14,6 +14,12 @@
         android:title="@string/menu_exchanges" />
 
     <item
+        android:id="@+id/menu_profit_calculator"
+        android:enabled="true"
+        android:icon="@drawable/point_of_sale"
+        android:title="@string/menu_profit" />
+
+    <item
         android:id="@+id/menu_bookmarks"
         android:icon="@drawable/bookmark_outlined"
         android:title="@string/menu_bookmarks" />
