--- a/app/src/main/res/navigation/nav_root.xml
+++ b/app/src/main/res/navigation/nav_root.xml
@@ -76,8 +76,8 @@
                 android:name="sortBy"
                 app:argType="com.hxl.presentation.coin.CoinSortBy"
                 android:defaultValue="RANK" />
-            <argument android:name="historyCallback"
-                app:argType="com.hxl.coinfuse.ui.dialogs.HistoryCallback" />
+            <argument android:name="dialogCallback"
+                app:argType="com.hxl.coinfuse.ui.dialogs.DialogCallback" />
         </action>
         <action
             android:id="@+id/navigation_to_exchangeSortDialog"
@@ -129,6 +129,9 @@
                 app:argType="string"
                 app:nullable="true" />
         </action>
+        <action
+            android:id="@+id/navigation_to_profitCalculatorDialog"
+            app:destination="@id/profitCalculatorDialog" />
     </fragment>
     <fragment
         android:id="@+id/coinDetailsFragment"
@@ -238,5 +241,15 @@
             android:name="exchangeUrl"
             app:argType="string"
             app:nullable="true" />
+    </dialog>
+    <dialog
+        android:id="@+id/profitCalculatorDialog"
+        android:name="com.hxl.coinfuse.ui.dialogs.profit.ProfitCalculatorDialog"
+        android:label="ProfitCalculatorDialog" >
+        <argument
+            android:name="consumer"
+            app:argType="com.hxl.coinfuse.ui.dialogs.ParcelableConsumer"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </dialog>
 </navigation>
