--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -69,6 +69,7 @@
                         android:orientation="vertical">
 
                         <LinearLayout
+                            android:id="@+id/pref_theme"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackground"
@@ -87,15 +88,17 @@
                                 android:textStyle="bold" />
 
                             <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/pref_theme_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:text="@{theme}"
                                 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                 android:textColor="?attr/colorOnBackground"
-                                android:text="@{theme}"
                                 tools:text="System" />
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/pref_language"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="?attr/selectableItemBackground"
@@ -114,40 +117,15 @@
                                 android:textStyle="bold" />
 
                             <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/pref_language_val"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:text="@{language}"
                                 android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                 android:textColor="?attr/colorOnBackground"
-                                android:text="@{language}"
                                 tools:text="English" />
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackground"
-                            android:divider="@drawable/ll_divider"
-                            android:orientation="horizontal"
-                            android:padding="@dimen/default_padding_small"
-                            android:showDividers="middle">
-
-                            <com.google.android.material.textview.MaterialTextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="@string/pref_currency"
-                                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-                                android:textColor="?attr/colorOnBackground"
-                                android:textStyle="bold" />
-
-                            <com.google.android.material.textview.MaterialTextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                                android:textColor="?attr/colorOnBackground"
-                                android:text="@{currency}"
-                                tools:text="USD" />
-                        </LinearLayout>
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
 
