--- a/app/src/main/res/navigation/nav_root.xml
+++ b/app/src/main/res/navigation/nav_root.xml
@@ -32,112 +32,63 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" >
-            <argument android:name="coinId"
-                app:argType="string"
-                app:nullable="true" />
-            <argument android:name="coinName"
-                app:argType="string"
-                app:nullable="true" />
-            <argument android:name="coinSymbol"
-                app:argType="string"
-                app:nullable="true" />
-            <argument android:name="coinImg"
-                app:argType="string"
-                app:nullable="true" />
-        </action>
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/navigation_to_coinDialog"
-            app:destination="@id/coinDialog" >
-            <argument android:name="coinId"
-                app:argType="string"
-                app:nullable="false"/>
-            <argument android:name="explorerId"
-                app:argType="string"
-                app:nullable="true"/>
-            <argument android:name="searchQuery"
-                app:argType="string"
-                app:nullable="true"/>
-        </action>
+            app:destination="@id/coinDialog"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/navigation_to_coinSortDialog"
-            app:destination="@id/coinSortDialog" >
-            <argument
-                android:name="isTimeSortable"
-                android:defaultValue="false" />
-            <argument
-                android:name="sortCallback"
-                app:argType="com.hxl.coinfuse.ui.dialogs.SortCallback" />
-            <argument
-                android:name="orderBy"
-                app:argType="com.hxl.presentation.OrderBy"
-                android:defaultValue="DESC" />
-            <argument
-                android:name="sortBy"
-                app:argType="com.hxl.presentation.coin.CoinSortBy"
-                android:defaultValue="RANK" />
-            <argument android:name="dialogCallback"
-                app:argType="com.hxl.coinfuse.ui.dialogs.DialogCallback" />
-        </action>
+            app:destination="@id/coinSortDialog"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/navigation_to_exchangeSortDialog"
-            app:destination="@+id/exchangeSortDialog">
-            <argument
-                android:name="sortCallback"
-                app:argType="com.hxl.coinfuse.ui.dialogs.SortCallback" />
-            <argument
-                android:name="orderBy"
-                app:argType="com.hxl.presentation.OrderBy"
-                android:defaultValue="ASC" />
-            <argument
-                android:name="sortBy"
-                app:argType="com.hxl.presentation.exchange.ExchangeSortBy"
-                android:defaultValue="RANK" />
-        </action>
+            app:destination="@+id/exchangeSortDialog"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/navigation_to_ExchangeDetails"
             app:destination="@id/exchangeDetailsFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim">
-            <argument
-                android:name="exchangeId"
-                app:argType="string"
-                app:nullable="true" />
-            <argument
-                android:name="exchangeName"
-                app:argType="string"
-                app:nullable="true" />
-            <argument
-                android:name="exchangeVolume"
-                app:argType="string"
-                app:nullable="true" />
-            <argument
-                android:name="exchangePairs"
-                app:argType="integer" />
-            <argument
-                android:name="exchangeUrl"
-                app:argType="string"
-                app:nullable="true" />
-        </action>
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/navigation_to_exchangeDialog"
-            app:destination="@id/exchangeDialog" >
-            <argument
-                android:name="exchangeUrl"
-                app:argType="string"
-                app:nullable="true" />
-        </action>
+            app:destination="@id/exchangeDialog"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/navigation_to_profitCalculatorDialog"
-            app:destination="@id/profitCalculatorDialog" />
+            app:destination="@id/profitCalculatorDialog"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"  />
         <action
             android:id="@+id/navigation_to_themeDialog"
-            app:destination="@id/themeDialog" />
+            app:destination="@id/themeDialog"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"  />
         <action
             android:id="@+id/navigation_to_languageDialog"
-            app:destination="@id/languageDialog" />
+            app:destination="@id/languageDialog"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"  />
     </fragment>
     <fragment
         android:id="@+id/coinDetailsFragment"
