--- a/app/src/main/res/navigation/nav_root.xml
+++ b/app/src/main/res/navigation/nav_root.xml
@@ -89,6 +89,9 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"  />
+        <action
+            android:id="@+id/navigation_to_aboutUsFragment"
+            app:destination="@id/aboutUsFragment" />
     </fragment>
     <fragment
         android:id="@+id/coinDetailsFragment"
@@ -237,4 +240,8 @@
             app:nullable="true"
             android:defaultValue="@null" />
     </dialog>
+    <fragment
+        android:id="@+id/aboutUsFragment"
+        android:name="com.hxl.coinfuse.ui.fragments.settings.pages.AboutUsFragment"
+        android:label="AboutUsFragment" />
 </navigation>
