--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -266,6 +266,17 @@
                             android:textColor="?attr/colorOnBackground"
                             android:textStyle="bold" />
 
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/tv_rate_app"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:padding="@dimen/default_padding_small"
+                            android:text="@string/rate_app"
+                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                            android:textColor="?attr/colorOnBackground"
+                            android:textStyle="bold" />
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
